Add interactive info boxes for Moon and Kawai (CUBE) models

--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
     </style>
   </head>
   <body>
+    <div id="infoBoxMoon" style="
+      display: none;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background: white;
+      padding: 15px;
+      border: 2px solid black;
+      border-radius: 8px;
+      font-family: Arial, sans-serif;
+      max-width: 300px;
+      z-index: 999;">
+      <strong>Lune 🌕</strong><br />
+      La Lune est le seul satellite naturel permanent de la Terre. Elle influence les marées et a toujours fasciné les civilisations humaines.
+    </div>
+    
+    <div id="infoBoxKawai" style="
+      display: none;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background: white;
+      padding: 15px;
+      border: 2px solid black;
+      border-radius: 8px;
+      font-family: Arial, sans-serif;
+      max-width: 300px;
+      z-index: 999;">
+      <strong>Kawai</strong><br />
+      Ce champignon Kawai est vraiment trop cuteeeeeeeeeeeeeee !!!!
+    </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
