--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
       Ce champignon Kawai est vraiment trop cuteeeeeeeeeeeeeee !!!!
     </div>
 
-    <script type="module" src="./test.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
