Add information box for planet interaction and enhance lighting effects in main.js

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       Le Soleil est l'étoile centrale de notre système solaire, source principale d'énergie et lumière pour les planètes.
     </div>
 
+    <div id="infoBox" style="display: block; position: absolute; top: 20px; left: 20px; background: white; padding: 15px; border: 2px solid black; border-radius: 8px; font-family: Arial, sans-serif; max-width: 300px; z-index: 999;">
+      <strong>Information</strong><br />
+      Cliquez sur une planète pour afficher ses informations.
+    </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
