--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Solar System</title>
-    <icon href="public/icon.png" />
+    <link rel="icon" type="image/x-icon" href="public/icon.png">
     <style>
       body {
         margin: 0;
